fixed loading screen text on mobile

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -101,5 +101,9 @@ a:hover {
         font-size: xx-large;
     }
 
+    .loadingtext {
+        font-size: medium;
+        text-align: center;
+    }
 
 }
